Update Dockerfile - New Structure

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,16 +7,17 @@
 FROM python:3.11-slim
 LABEL maintainer="support@taiga.io"
 
-ENV DEBIAN_FRONTEND=noninteractive
-ENV PYTHONUNBUFFERED=1
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONFAULTHANDLER=1
+ENV DEBIAN_FRONTEND=noninteractive \
+    PYTHONUNBUFFERED=1 \
+    PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONFAULTHANDLER=1 \
+    DJANGO_SETTINGS_MODULE=settings.config \
+    PATH="/opt/venv/bin:$PATH"
 
 # Create a virtualenv
 RUN python -m venv /opt/venv
-ENV PATH="/opt/venv/bin:$PATH"
 
-# ✅ System dependencies (including libxml2 & libxslt)
+# System dependencies (incl. libxml2 & libxslt)
 RUN apt-get update && apt-get install -y \
     build-essential \
     libffi-dev \
@@ -36,55 +37,44 @@ RUN apt-get update && apt-get install -y \
     gnupg \
     ca-certificates
 
-# ✅ Install Python tooling
+# Install Python tooling
 RUN pip install --upgrade pip setuptools wheel
 
 # Copy project code
-COPY . /taiga-back
 WORKDIR /taiga-back
+COPY . /taiga-back
 
-# Copy requirement files first for Docker cache optimization
-COPY requirements.txt .
-COPY requirements-contribs.txt .
+# Install dependencies
+RUN pip install --verbose -r requirements.txt && \
+    pip install --verbose -r requirements-contribs.txt
 
-# ✅ Install dependencies
-RUN pip install --verbose -r requirements.txt
-RUN pip install --verbose -r requirements-contribs.txt
+# App preparation: compile messages, collect static, permission handling
+RUN bash -c "\
+    python manage.py compilemessages && \
+    python manage.py collectstatic --no-input && \
+    chmod +x docker/entrypoint.sh docker/async_entrypoint.sh && \
+    cp docker/config.py settings/config.py && \
+    groupadd --system taiga --gid=999 && \
+    useradd --system --no-create-home --gid taiga --uid=999 --shell=/bin/bash taiga && \
+    mkdir -p /taiga-back/media/exports && \
+    chown -R taiga:taiga /taiga-back \
+"
 
-
-    \
-    # ✅ django setup
-    python manage.py compilemessages; \
-    python manage.py collectstatic --no-input; \
-    chmod +x docker/entrypoint.sh; \
-    chmod +x docker/async_entrypoint.sh; \
-    cp docker/config.py settings/config.py; \
-    \
-    # ✅ setup taiga user
-    groupadd --system taiga --gid=999; \
-    useradd --system --no-create-home --gid taiga --uid=999 --shell=/bin/bash taiga; \
-    mkdir -p /taiga-back/media/exports; \
-    chown -R taiga:taiga /taiga-back; \
-    \
-    # ✅ clean up
-    apt-get purge -y \
-       build-essential \
-       gettext \
-       git \
-       libpq-dev \
-       net-tools \
-       procps \
-       wget; \
-    apt-get autoremove -y; \
-    rm -rf /var/lib/apt/lists/*; \
-    rm -rf /root/.cache; \
-    rm requirements.txt; \
-    rm requirements-contribs.txt; \
-    find . -name '__pycache__' -exec rm -r '{}' +; \
-    find . -name '*pyc' -exec rm -r '{}' +; \
+# Clean up to reduce image size
+RUN apt-get purge -y \
+    build-essential \
+    gettext \
+    git \
+    libpq-dev \
+    net-tools \
+    procps \
+    wget && \
+    apt-get autoremove -y && \
+    rm -rf /var/lib/apt/lists/* /root/.cache && \
+    rm requirements.txt requirements-contribs.txt && \
+    find . -name '__pycache__' -exec rm -r '{}' + && \
+    find . -name '*pyc' -exec rm -r '{}' + && \
     find . -name '*po' -exec rm -r '{}' +
-
-ENV DJANGO_SETTINGS_MODULE=settings.config
 
 EXPOSE 8000
 ENTRYPOINT ["./docker/entrypoint.sh"]
