Update Dockerfile - new structure

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,17 +7,13 @@
 FROM python:3.11-slim
 LABEL maintainer="support@taiga.io"
 
-ENV DEBIAN_FRONTEND=noninteractive \
-    PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PYTHONFAULTHANDLER=1 \
-    DJANGO_SETTINGS_MODULE=settings.config \
-    PATH="/opt/venv/bin:$PATH"
+ENV DEBIAN_FRONTEND=noninteractive
+ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONFAULTHANDLER=1
+ENV PATH="/opt/venv/bin:$PATH"
 
-# Create a virtualenv
-RUN python -m venv /opt/venv
-
-# System dependencies (incl. libxml2 & libxslt)
+# 🛠 System dependencies for building lxml and Python packages
 RUN apt-get update && apt-get install -y \
     build-essential \
     libffi-dev \
@@ -37,38 +33,37 @@ RUN apt-get update && apt-get install -y \
     gnupg \
     ca-certificates
 
-# Install Python tooling
-RUN pip install --upgrade pip setuptools wheel
+# 🐍 Set up Python virtual environment
+RUN python -m venv /opt/venv
+RUN . /opt/venv/bin/activate && pip install --upgrade pip setuptools wheel
 
-# Copy project code
+# 📁 Set working directory & copy project
 WORKDIR /taiga-back
-COPY . /taiga-back
+COPY . .
 
-# Install dependencies
-RUN pip install --verbose -r requirements.txt && \
-    pip install --verbose -r requirements-contribs.txt
+# 📦 Install dependencies
+RUN pip install --verbose -r requirements.txt
+RUN pip install --verbose -r requirements-contribs.txt
 
-# App preparation: compile messages, collect static, permission handling
-RUN bash -c "\
+# 🧰 Setup scripts and files
+RUN chmod +x docker/entrypoint.sh docker/async_entrypoint.sh && \
     python manage.py compilemessages && \
     python manage.py collectstatic --no-input && \
-    chmod +x docker/entrypoint.sh docker/async_entrypoint.sh && \
     cp docker/config.py settings/config.py && \
     groupadd --system taiga --gid=999 && \
     useradd --system --no-create-home --gid taiga --uid=999 --shell=/bin/bash taiga && \
     mkdir -p /taiga-back/media/exports && \
-    chown -R taiga:taiga /taiga-back \
-"
+    chown -R taiga:taiga /taiga-back
 
-# Clean up to reduce image size
+# 🧹 Clean up build dependencies
 RUN apt-get purge -y \
-    build-essential \
-    gettext \
-    git \
-    libpq-dev \
-    net-tools \
-    procps \
-    wget && \
+       build-essential \
+       gettext \
+       git \
+       libpq-dev \
+       net-tools \
+       procps \
+       wget && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/* /root/.cache && \
     rm requirements.txt requirements-contribs.txt && \
@@ -76,6 +71,9 @@ RUN apt-get purge -y \
     find . -name '*pyc' -exec rm -r '{}' + && \
     find . -name '*po' -exec rm -r '{}' +
 
+ENV DJANGO_SETTINGS_MODULE=settings.config
+
 EXPOSE 8000
 ENTRYPOINT ["./docker/entrypoint.sh"]
+
 
